--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Dubai</h1>
+	<br>
+	<p>An unordered list (ul) that lists the must-try foods in the destination. Each list item must contain at least one piece of emphasized text (either strong or bold, and/or italicized).</p>
+	<ol>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+	</ol>
+	<ul>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+		<li><strong>efdfkv</strong></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
