--- a/main.html
+++ b/main.html
@@ -8,28 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Kyoto, Japan</h1>
-    <br>
-
-    <p>Kyoto is the cultural and historical heart of Japan, famous for its classical Buddhist temples, Shinto shrines, and traditional wooden houses. Once the imperial capital of Japan for over a millennium, it offers a serene atmosphere where ancient traditions meet stunning natural beauty, particularly during the cherry blossom and autumn foliage seasons.</p>
-
-    <h2>Top 5 Attractions</h2>
-    <ol>
-        <li><strong>Fushimi Inari-taisha</strong> – Famous for its thousands of <em>vibrant vermilion torii gates</em> that wind up the wooded mountain.</li>
-        <li><strong>Kinkaku-ji</strong> – Also known as the <em>Golden Pavilion</em>, this Zen temple is completely covered in <strong>shimmering gold leaf</strong>.</li>
-        <li><strong>Arashiyama Bamboo Grove</strong> – A breathtaking path where you can walk through <strong>towering green stalks</strong> that sway beautifully in the wind.</li>
-        <li><strong>Kiyomizu-dera</strong> – An iconic <em>wooden temple</em> built without a single nail, offering <strong>spectacular views</strong> of the city.</li>
-        <li><strong>Gion District</strong> – Kyoto's most famous <em>geisha district</em>, filled with traditional teahouses and <strong>historic architecture</strong>.</li>
-    </ol>
-
-    <h2>Must-Try Foods</h2>
-    <ul>
-        <li><strong>Kaiseki Ryori</strong> – A traditional <em>multi-course dinner</em> that balances taste, texture, and appearance.</li>
-        <li><strong>Matcha Everything</strong> – Kyoto (specifically Uji) is world-renowned for its <em>high-quality green tea</em>, used in everything from <strong>lattes to soft-serve ice cream</strong>.</li>
-        <li><strong>Yudofu</strong> – A simple yet elegant dish of <strong>silken tofu</strong> simmered in a kombu broth, often served in <em>Zen temples</em>.</li>
-        <li><strong>Yatsuhashi</strong> – A popular <em>cinnamon-flavored sweet</em> made from glutinous rice flour, often folded into <strong>triangular shapes</strong>.</li>
-        <li><strong>Tsukemono</strong> – Assorted <strong>Japanese pickles</strong> that are a staple of the Kyoto diet and prized for their <em>refreshing crunch</em>.</li>
-    </ul>
+	<h1>Bali</h1>
+<br>
+<p>Bali is known for its stunning beaches, vibrant culture, and lush landscapes.</p>
+<ol>
+    <li><strong>Uluwatu Temple</strong> - A beautiful sea temple.</li>
+    <li><strong>Kuta Beach</strong> - Famous for surfing.</li>
+    <li><strong>Rice Terraces</strong> - Stunning views of rice paddies.</li>
+    <li><strong>Monkey Forest</strong> - Home to playful monkeys.</li>
+    <li><strong>Seminyak</strong> - Known for its upscale shopping and dining.</li>
+</ol>
+<ul>
+    <li><strong>Nasi Goreng</strong> - Fried rice with vegetables and meat.</li>
+    <li><strong>Satay</strong> - Grilled meat skewers served with peanut sauce.</li>
+    <li><strong>Gado-Gado</strong> - Mixed vegetables with peanut sauce.</li>
+    <li><strong>Rendang</strong> - Spicy beef stew.</li>
+    <li><strong>Babi Guling</strong> - Suckling pig, a Balinese delicacy.</li>
+</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
