--- a/main.html
+++ b/main.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Favorite Holiday</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<h1>Bali</h1>
-	<br>
-	<p>Bali is known for its stunning beaches, vibrant culture, and lush landscapes.</p>
-	<ol>
-	    <li><strong>Uluwatu Temple</strong> - A beautiful sea temple.</li>
-	    <li><strong>Kuta Beach</strong> - Famous for surfing.</li>
-	    <li><strong>Rice Terraces</strong> - Stunning views of rice paddies.</li>
-	    <li><strong>Monkey Forest</strong> - Home to playful monkeys.</li>
-	    <li><strong>Seminyak</strong> - Known for its upscale shopping and dining.</li>
-	</ol>
-	<ul>
-	    <li><strong>Nasi Goreng</strong> - Fried rice with vegetables and meat.</li>
-	    <li><strong>Satay</strong> - Grilled meat skewers served with peanut sauce.</li>
-	    <li><strong>Gado-Gado</strong> - Mixed vegetables with peanut sauce.</li>
-	    <li><strong>Rendang</strong> - Spicy beef stew.</li>
-	    <li><strong>Babi Guling</strong> - Suckling pig, a Balinese delicacy.</li>
-	</ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Your Favorite Destination</h1>
+    <br>
+    <p>This is a brief overview of the destination.</p>
+    
+    <ol>
+        <li><strong>Attraction 1</strong> - Description of attraction 1</li>
+        <li><strong>Attraction 2</strong> - Description of attraction 2</li>
+        <li><strong>Attraction 3</strong> - Description of attraction 3</li>
+        <li><strong>Attraction 4</strong> - Description of attraction 4</li>
+        <li><strong>Attraction 5</strong> - Description of attraction 5</li>
+    </ol>
+    
+    <ul>
+        <li><em>Food 1</em> - Description of food 1</li>
+        <li><em>Food 2</em> - Description of food 2</li>
+        <li><em>Food 3</em> - Description of food 3</li>
+    </ul>
 </body>
-
 </html>
