--- a/main.html
+++ b/main.html
@@ -11,17 +11,17 @@
     <p>This is a brief overview of the destination.</p>
     
     <ol>
-        <li><strong>Attraction 1</strong> - Description of attraction 1</li>
-        <li><strong>Attraction 2</strong> - Description of attraction 2</li>
-        <li><strong>Attraction 3</strong> - Description of attraction 3</li>
-        <li><strong>Attraction 4</strong> - Description of attraction 4</li>
-        <li><strong>Attraction 5</strong> - Description of attraction 5</li>
+        <li><strong>Attraction 1</strong> - <i>Description of attraction 1</i></li>
+        <li><strong>Attraction 2</strong> - <i>Description of attraction 1</i></li>
+        <li><strong>Attraction 3</strong> - <i>Description of attraction 1</i></li>
+        <li><strong>Attraction 4</strong> - <i>Description of attraction 1</i></li>
+        <li><strong>Attraction 5</strong> - <i>Description of attraction 1</i></li>
     </ol>
     
     <ul>
-        <li><em>Food 1</em> - Description of food 1</li>
-        <li><em>Food 2</em> - Description of food 2</li>
-        <li><em>Food 3</em> - Description of food 3</li>
+        <li><em>Food 1</em> - <b>Description of food 1</b></li>
+        <li><em>Food 2</em> - <b>Description of food 1</b></li>
+        <li><em>Food 3</em> - <b>Description of food 1</b></li>
     </ul>
 </body>
 </html>
